--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Florian Bertchi | Awesome Dev</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -24,15 +24,17 @@
 	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-	<main>
-		<div class="intro">Hello, I'm Florian!</div>
+	<div id="menu0">menu</div>
+    <main>
+        
+		<div id="titre" class="intro">Hello, I'm Florian!</div>
 		<div class="tagline">Dev NOVICE | Code Fanatic | NUXE la crème  | BluBluBluBlu</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/Bruxellesflorian"><i class="fab fa-github"></i></a>
+			<a id="icons0" target="_blank" href="https://github.com/Bruxellesflorian"><i class="fab fa-github"></i></a>
 			<!-- <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a> -->
 			<!-- <a target="_blank" href="https://dev.to/"><i class="fab fa-dev"></i></a> -->
-			<!-- <a target="_blank" href="https://stackoverflow.com/"><i class="fab fa-stack-overflow"></i></a> -->
+			<!-- <a target="_blank" href="https://stackoverflow.com/"><i class="fab fa-stack-   overflow"></i></a> -->
 			<a target="_blank" href="https://www.linkedin.com/in/bertchi-florian-a3a064b1/"><i class="fab fa-linkedin"></i></a>
 			<!-- <a target="_blank" href="https://medium.com/"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
