--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-	<div id="menu0">menu</div>
+<!--	<div id="menu0">menu</div>-->
     <main>
         
 		<div id="titre" class="intro">Hello, I'm Florian!</div>
