test d'ajout d'img

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 <!--	<div id="menu0">menu</div>-->
     <main>
-        
+        <div><img src="flo.jpg"></div>
 		<div id="titre" class="intro">Hello, I'm Florian!</div>
 		<div class="tagline">Dev NOVICE | Code Fanatic | NUXE la crème  | BluBluBluBlu</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
